--- a/index.html
+++ b/index.html
@@ -539,11 +539,10 @@
             </tr>
             <tr> <td>Server X 1</td> <td>Window Server</td> </tr>
             <tr> <td>Computer X 8</td> <td>Windows</td> </tr>
-            <tr> <td>&nbsp;Processor (CPU)</td> <td>&nbsp;Operating System (OS)</td> </tr>
-            <tr> <td>&nbsp;Memory (RAM)</td> <td>&nbsp;Productivity Suite (e.g., Microsoft Office, Google Workspace)</td> </tr>
-            <tr> <td>&nbsp;Hard Drive (HDD/SSD)</td> <td>Web Browsers (e.g., Chrome, Firefox)</td> </tr>
-            <tr> <td>&nbsp;Motherboard</td> <td>&nbsp;Antivirus and Security Software</td> </tr>
-            <tr> <td>&nbsp;Power Supply Unit (PSU)</td> <td>&nbsp;Graphics and Design Software (e.g., Adobe Photoshop, AutoCAD)</td> </tr>
+            <tr> <td>&nbsp;Printer X 1</td> <td>&nbsp;SQL server</td> </tr>
+            <tr> <td>&nbsp;Telephone X 8</td> <td>&nbsp;Virus Protection </td> </tr>
+            <tr> <td>&nbsp;Modern X 2</td> <td>MS office</td> </tr>
+            <tr> <td>&nbsp;Network Cable </td> <td>&nbsp;Eftpos machine </td> </tr>
             <tr> <td>&nbsp;Network Router/Modem</td> <td>Email Clients (e.g., Outlook, Gmail)</td> </tr>
           </table>
         </center>
